samples/_failures_safe/1761505344_1a3341_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1930a9c8.c: In function ‘main’:
./samples/SAFE/__tmp_1930a9c8.c:149:16: error: missing terminating " character
  149 |         printf("Point %zu: %.6f\n
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1930a9c8.c:149:9: error: expected expression at end of input
  149 |         printf("Point %zu: %.6f\n
      |         ^~~~~~
./samples/SAFE/__tmp_1930a9c8.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1930a9c8.c:149:9: error: expected declaration or statement at end of input
